Работа выполнена(задание 3) v2.